@@ -1,8 +1,8 @@
+/* This file is generated by glib-genmarshal, do not modify it. This code is licensed under the same license as the containing project. Note that it links to GLib, so must comply with the LGPL linking clauses. */
+#ifndef __GTK_DATABOX_MARSHAL_MARSHAL_H__
+#define __GTK_DATABOX_MARSHAL_MARSHAL_H__
 
-#ifndef __gtk_databox_marshal_MARSHAL_H__
-#define __gtk_databox_marshal_MARSHAL_H__
-
-#include	<glib-object.h>
+#include <glib-object.h>
 
 G_BEGIN_DECLS
 
@@ -12,7 +12,7 @@ G_BEGIN_DECLS
 /* VOID:POINTER (gtkdatabox_marshal.list:2) */
 #define gtk_databox_marshal_VOID__POINTER	g_cclosure_marshal_VOID__POINTER
 
+
 G_END_DECLS
 
-#endif /* __gtk_databox_marshal_MARSHAL_H__ */
-
+#endif /* __GTK_DATABOX_MARSHAL_MARSHAL_H__ */
