@@ -19,6 +19,7 @@
 	- Some deprecated GTK functions were updated. 
 	- Using 2 copies of character pool for the basic lessons generator,
 	  for a little bit more double sequences of same char.
+	- Using new GtkDataBox update, from GIT repository.
 	* Added:
 	- dvorak_de_adnw.kbd	"Aus der Neue Welt" german keyboard layout
 	- dvorak_us_left.kbd	Dvorak left hand layout
